# fjb

./: .clang-format  .gdb  .gitignore  .gitmodules  CMakeLists.txt  Makefile  PLUGINS.md  README.md  bench.json  benchmarks.html  benchmarks.md  build.sh  context.json  copy_bench.sh  generate_bench.sh  github_make.sh  main.js  package.json  package.sh  pkg.gpp  pkg.json  prof.sh  pull_deps.sh  pull_deps_github.sh  run.sh  version.sh  workflow.sh
benchmark/: generate.py  package.json  rollup.config.js  setup.py
lab/: a.js  dot.js  log.txt  package.json  run.sh
plugin_example/: Makefile  plugin.c  (+1 more)
tests/: CMakeLists.txt  Makefile  dot.js  fjb  run.sh  setup_chromedriver.sh  web.py  web.sh
tests/src/: main.c  test_utils.c
tests/src/include/: test_utils.h
tests/src/test_projects/alias_imports/: index.js  utils.js
tests/src/test_projects/array_access/: index.js
tests/src/test_projects/class/: index.js
tests/src/test_projects/complex_import/: index.js
tests/src/test_projects/complex_import/helpers/: add.js  bug.js  sub.js
tests/src/test_projects/cookie_banner/: index.js
tests/src/test_projects/css_import/: build.sh  index.html  index.js  style.css
tests/src/test_projects/destruct/: index.js
tests/src/test_projects/es6/: dist.js
tests/src/test_projects/es6/helpers/: math.js
tests/src/test_projects/highlightjs/: index.js
tests/src/test_projects/json_import/: index.js  people.json
tests/src/test_projects/jsx/: build.sh  dist.js  index.html  index.jsx
tests/src/test_projects/jsx_custom/: dist.js  index.html  index.jsx
tests/src/test_projects/noimports/: index.js
tests/src/test_projects/react_import/: package.json
tests/src/test_projects/regex/: index.js
tests/src/test_projects/scss_import/: index.js  style.scss
tests/src/test_projects/simple/: dist.js  index.js
tests/src/test_projects/simple/helpers/: math.js
tests/src/test_projects/strings/: index.js
tests/src/test_projects/ternary/: index.js
tests/src/test_projects/ts_fib/: index.ts
tests/src/test_projects/ts_generics/: index.ts
tests/src/test_projects/ts_intersect/: index.ts
tests/src/test_projects/ts_union/: index.ts
tests/src/test_projects/typescript_custom_hint/: index.ts
tests/src/test_projects/typescript_hint/: index.ts
tests/src/test_projects/typescript_hint_function/: index.ts
tests/src/test_projects/typescript_interface/: index.ts
tests/src/test_projects/typescript_interface_extends/: index.ts
tests/src/test_projects/wildcard_imports/: index.js  utils.js
tests/src/test_projects/with_assignments/: index.js
tests/src/test_projects/with_jquery/: index.js  jquery.js
tests/src/test_projects/with_lodash/: index.js  package.json
tests/src/test_projects/with_react/: build.sh  card.jsx  dot.js  index.html  index.jsx  package.json  style.css
tests/src/test_projects/with_vue/: build.sh  index.html  index.js
(+155 files in other folders)
